--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,12 +1,13 @@
-FROM node:20-alpine
+# Build stage
+FROM node:24-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY backend/package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install all dependencies (including dev)
+RUN npm ci
 
 # Copy source code
 COPY backend/tsconfig.json ./
@@ -15,8 +16,32 @@ COPY backend/src ./src
 # Build TypeScript
 RUN npm run build
 
+# Production stage
+FROM node:24-alpine
+
+WORKDIR /app
+
+# Create non-root user
+RUN addgroup -g 1001 -S appgroup && \
+    adduser -u 1001 -S appuser -G appgroup
+
+# Copy built files
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package*.json ./
+
+# Change ownership
+RUN chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
+
 # Expose port
-EXPOSE 3000
+EXPOSE 3001
+
+# Healthcheck
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://127.0.0.1:3001/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"
 
 # Start the application
-CMD ["npm", "start"]
+CMD ["node", "dist/index.js"]
