--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,23 +8,20 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - DB_HOST=db
       - DB_PORT=5432
       - DB_NAME=controlplane_pm
       - DB_USER=postgres
       - DB_PASSWORD=postgres
-      - JWT_SECRET=${JWT_SECRET:-change-this-in-production}
+      - JWT_SECRET=dev-secret-key-not-for-production
       - PORT=3001
     depends_on:
       - db
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://127.0.0.1:3001/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
+    volumes:
+      - ../backend:/app
+      - /app/node_modules
+    command: npm run dev
 
   worker:
     build:
@@ -32,29 +29,17 @@ services:
       dockerfile: docker/Dockerfile.backend
     command: ["npm", "run", "worker"]
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - DB_HOST=db
       - DB_PORT=5432
       - DB_NAME=controlplane_pm
       - DB_USER=postgres
       - DB_PASSWORD=postgres
-      - JWT_SECRET=${JWT_SECRET:-change-this-in-production}
+      - JWT_SECRET=dev-secret-key-not-for-production
     depends_on:
       - db
-    restart: unless-stopped
-
-  frontend:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile.frontend
-    ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:3001
-    depends_on:
-      - backend
     volumes:
-      - ../frontend:/app
+      - ../backend:/app
       - /app/node_modules
 
   db:
@@ -67,7 +52,7 @@ services:
       - POSTGRES_DB=controlplane_pm
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+      - ../backend/src/database/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   postgres_data:
