--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "controlplane-project-manager-backend",
+  "name": "controlplane-pm-backend",
   "version": "1.0.0",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.0",
+    "express": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "bcrypt": "^5.1.0",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
+    "@types/express": "^5.0.0",
     "@types/cors": "^2.8.0",
-    "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0"
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/pg": "^8.10.0",
+    "typescript": "^5.7.0",
+    "ts-node": "^10.9.0"
   }
 }
