--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^9.0.0",
     "bcrypt": "^5.1.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "ws": "^8.16.0",
+    "dockerode": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -21,6 +23,8 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/pg": "^8.10.0",
+    "@types/ws": "^8.5.10",
+    "@types/dockerode": "^3.3.23",
     "typescript": "^5.7.0",
     "ts-node": "^10.9.0"
   }
