--- a/backend/package.json
+++ b/backend/package.json
@@ -11,26 +11,27 @@
     "worker": "tsx src/worker.ts"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
-    "pg": "^8.13.0",
-    "bcrypt": "^5.1.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^22.10.0",
-    "@types/pg": "^8.11.10",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.0",
+    "@types/node-fetch": "^2.6.13",
+    "@types/pg": "^8.11.10",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.17.0",
-    "typescript": "^5.7.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
